# qeet-notify

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod  go.sum
configs/: config.dev.yaml  config.example.yaml  config.prod.yaml  config.staging.yaml
deploy/: Caddyfile  docker-compose.yml
deployments/: docker-compose.dev.yml  docker-compose.yml
frontend/: package.json
migrations/: 0001_create_tenants.up.sql  0002_create_subscribers.down.sql  0002_create_subscribers.up.sql  0003_create_templates.up.sql  0004_create_workflows.up.sql  0005_create_workflow_runs.down.sql  0005_create_workflow_runs.up.sql  0006_create_notifications.up.sql  0007_create_delivery_events.down.sql  0007_create_delivery_events.up.sql  0008_create_suppressions.down.sql  0008_create_suppressions.up.sql  0009_create_preferences.up.sql  0010_create_dlt_templates.down.sql  0010_create_dlt_templates.up.sql  0011_create_provider_configs.up.sql  0012_create_audit_logs.up.sql  0013_pii_decrypt_fn.down.sql  0013_pii_decrypt_fn.up.sql  0014_create_api_keys.up.sql  0015_add_suppressed_status.down.sql  0015_add_suppressed_status.up.sql  0016_create_ndnc_registry.down.sql  0016_create_ndnc_registry.up.sql  0017_create_consent_ledger.down.sql  0017_create_consent_ledger.up.sql  0018_force_row_level_security.down.sql  0018_force_row_level_security.up.sql  0019_rls_policy_nullif.down.sql  0019_rls_policy_nullif.up.sql
scripts/: check-deps.sh  generate.sh  migrate.sh  (+2 more)
sdk/python/: pyproject.toml
sdk/python/qeet_notify/: __init__.py  client.py  models.py
(+239 files in other folders)
